<resources>
    <string name="app_name">Assistant AnnuairesEA</string>
    <string name="home">Accueil</string>
    <string name="liste_entreprise">Liste d\'entreprise</string>
    <string name="btnScan">Scanner</string>
    <string name="header">Annuaires EA</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="annuairedz">Annuaires EA</string>
    <string name="nbrEntreprise">Entreprises partenaires</string>
    <string name="nbrTotalEntreprise">Entreprises enregistrées</string>
    <string name="btnAjouterManuel">Ajout manuel</string>
    <string name="nom">Dénomination commerciale</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="tel">Télephone</string>
    <string name="fixe">Fixe</string>
    <string name="fax">Fax</string>
    <string name="tel2">Téléphone 2</string>
    <string name="nouvel_entreprise">Nouvelle entreprise</string>
    <string name="mots_clés">Mots clés</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmer">Confirmer</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="partenair_radio_text">Partenaire :</string>
    <string name="importance">Importance :</string>
    <string name="utiliser_camera">Utiliser Camera</string>
    <string name="informations">Informations</string>
    <string name="supprimer">Supprimer</string>
    <string name="liste_des_partenaires">Liste des partenaires</string>
    <string name="rendez_vous">Rendez-vous</string>
    <string name="location">Location</string>
    <string name="modifier_entreprise">Modification</string>
    <string name="localization">Localization</string>
    <string name="exporter_vers_excel">Exporter vers Excel</string>
    <string name="send_to">Exporter vers :</string>
    <string name="mots_clefs">Mots Clés</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="mdp">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="connecter">Connecter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email_denvoi">Email d\'envoi</string>
    <string name="r_esseyer">Réessayer</string>
    <string name="secteurs_activites">Secteurs d\'activités</string>
    <string name="facebook">Facebook</string>
    <string name="scanner_informations">Scanner les informations</string>
    <string name="personne_en_contact">Personne en contact</string>
    <string name="addresse">Adresse</string>
    <string name="commune">Commune</string>
    <string name="wilaya">Wilaya</string>
    <string name="annee_creation">Année de création</string>
    <string name="choisir_le_logo">Choisir le logo</string>
    <string name="deconnecter">Déconnecter</string>
</resources>
