<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/radius">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/modifier_entreprise"
            app:menu="@menu/new_info_top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:background="@drawable/radius"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:id="@+id/new_entreprise_scrollview">

        <RelativeLayout

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".NewEntreprise"
            android:id="@+id/new_entreprise_r_layout">

            <ImageView
                android:id="@+id/img_new_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/new_company_90px"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nom"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@+id/img_new_company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/tel"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_nom">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/tel2"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_tel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_tel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_fix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/fixe"
                app:boxBackgroundColor="@color/divider"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_below="@id/layout_tel2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_fixe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_fix"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/website"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/location"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_website"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/mots_clefs"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_location"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/mots_clefs"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_info"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_mots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/radio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_mots"
                android:layout_alignStart="@+id/layout_mots"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partenair_radio_text"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/primary_text"
                    android:labelFor="@id/radio_layout"/>
                <RadioGroup
                    android:id="@+id/partenair_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/partner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oui"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:id="@+id/not_partner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_layout"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/importance"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"/>
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>