<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/radius">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/nouvel_entreprise"
            app:menu="@menu/new_info_top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:background="@drawable/radius"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:id="@+id/new_entreprise_scrollview">

        <RelativeLayout

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".NewEntreprise"
            android:id="@+id/new_entreprise_r_layout">


            <ImageView
                android:id="@+id/img_new_company"
                android:layout_width="240dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/new_company_90px"
                />
            <ProgressBar
                android:id="@+id/loading_new_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_new_company"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/choisir_le_logo"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/img_new_company"
                android:id="@+id/btn_logo_retry"
                android:visibility="visible"/>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nom"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@+id/img_new_company"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nom_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/personne_en_contact"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@+id/layout_nom"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_nom_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/tel"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_nom_contact">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/tel2"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_tel"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_tel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_fix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/fixe"
                app:boxBackgroundColor="@color/divider"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_below="@id/layout_tel2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_fixe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/fax"
                app:boxBackgroundColor="@color/divider"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_below="@id/layout_fix"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_fax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_fax"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/website"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/addresse"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_website"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/layout_wilaya"
                android:layout_below="@id/layout_location">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/champ_wilaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/wilaya"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_commune"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/commune"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_wilaya"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_commune"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/secteur_activites_layout1"
                android:layout_below="@id/layout_commune"
                android:layout_marginTop="10dp">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/secteur_activites1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/secteurs_activites"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/secteur_activites_layout2"
                android:layout_below="@id/secteur_activites_layout1">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/secteur_activites2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/secteurs_activites"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/secteur_activites_layout3"
                android:layout_below="@id/secteur_activites_layout2">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/secteur_activites3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/secteurs_activites"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/facebook"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/secteur_activites_layout3"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mots_clés"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_facebook"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_mots_cles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_annee_creation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:hint="@string/annee_creation"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundColor="@color/divider"
                android:layout_below="@id/layout_info"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/champ_creation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>





        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>